<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="180dp"
    android:layout_margin="2dp"
    android:background="@color/design_default_color_on_primary">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:contentDescription="TODO"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/beer_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/place_holder_text"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beer_tagline"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/beer_name"
        android:layout_alignParentEnd="true"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/icon"
        android:text="@string/place_holder_text_long"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_beer_abv"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_tagline"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical|end"
        android:text="@string/label_beer_abv"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beer_abv"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_tagline"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/label_beer_abv"
        android:gravity="center_vertical|start"
        android:padding="4dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_beer_ibu"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_tagline"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/beer_abv"
        android:gravity="center_vertical|end"
        android:text="@string/label_beer_ibu"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beer_ibu"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_tagline"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/label_beer_ibu"
        android:gravity="center_vertical|start"
        android:padding="4dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_beer_ebc"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/label_beer_abv"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/icon"
        android:gravity="center_vertical|end"
        android:text="@string/label_beer_ebc"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beer_ebc"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_abv"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/label_beer_ebc"
        android:gravity="center_vertical|start"
        android:padding="4dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_beer_srm"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/label_beer_abv"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/beer_ebc"
        android:gravity="center_vertical|end"
        android:text="@string/label_beer_srm"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beer_srm"
        android:layout_width="@dimen/beer_detail_width"
        android:layout_height="@dimen/beer_detail_height"
        android:layout_below="@+id/beer_ibu"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/label_beer_srm"
        android:gravity="center_vertical|start"
        android:padding="4dp"

        android:textSize="14sp" />
</RelativeLayout>